--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "firebase": "^6.6.1",
     "re-base": "^4.0.0",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
